--- a/CovidDiscussion_Daniel.ipynb
+++ b/CovidDiscussion_Daniel.ipynb
@@ -19,6 +19,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90058b79-0931-49b9-b349-2813c533605d",
+   "metadata": {},
+   "source": [
+    "<H2>The Evolution of Decision Support Systems</H2>\n",
+    "\n",
+    "The term \"Decision Support Systems\" (DSS) emerged in 1978 when Keen and Scott Morton published a topic in which they discussed how computer systems together with analytical aids would effect a manager's judgment and decision making. It was actually in 1970 though, when such a system was defined by Little (WHAT-WHEN-HOW, ND)\n",
+    "\n",
+    "- In 1978, DSS was more dependent on the intellectual of individuakls who would use the resources of computers to help them with the quality of the decisions taken.\n",
+    "\n",
+    "- In 1984, Mann and Watson describe DSS as an interactive system that provides users with access to decision models to help them in decision-making.\n",
+    "\n",
+    "- In 1989, Bidgoli describes DSS as a computer hardware and software system with a human element that supports decision making on \"semi-structured and unstructured tasks\"\n",
+    "\n",
+    "- In 1996, Sprague and Watson note DSS as a computer-based system taht helps decision makers with ill-structured problems by using data and analysis tools.\n",
+    "\n",
+    "- 1997 saw Sauter describe DSS as computer systems that combine data from various sources to help companies analyse information and help in evaluating the assumptions in the use of specific models.\n",
+    "\n",
+    "- In 2005, Turban, Rainer and Potter define DSS as a computer-based system that uses models and various data to attempt to solve unstructured and semi-structured problems with the involvment of human users.\n",
+    "\n",
+    "Here one can see that the main concept and goal of DSS has always been the same since the early 1970s however what evolved during the years is the amount of data that such a system was able to make use of and also the amount of varied data that could be combined and transformed to create new useful data to support decision making.\n",
+    "\n",
+    "\n",
+    "<b>References</b><br>\n",
+    "WHAT-WHEN-HOW, ND. Historical Overview of Decision Support Systems (DSS) (information science) [Online]. What-When-How [Viewed 12th January 2023]. Available from: http://what-when-how.com/information-science-and-technology/historical-overview-of-decision-support-systems-dss-information-science/\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "add13e9a-2177-46ca-b135-f0b6974c5187",
